Fixed border on Safari

--- a/styles.less
+++ b/styles.less
@@ -54,6 +54,7 @@ body {
 				border: none;
 				font-size: 21px;
 				font-weight: 300;
+				margin: 0;
 
 				&:focus {
 					outline: none;
